@@ -14,7 +14,8 @@
  9. Don't allow QtCurve's colours to be overriden.
 10. Make 'filled focus' fill the complete widget for buttons and combos.
 11. Use button text colour for combo boxes.
-12. Add 'none' to toolbar handle style.
+12. Add 'none' to toolbar handles and splitters style.
+13. Fix reading of KDE4 toolbar style.
 
 0.60
 ----
